--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,8 @@
 **__pycache__
 /Audio*
 
-/pySonify/THEMISorbitNumber.py
+artifactTest.py
+phaseVOdev.py
+
+/pyMagnetoSonify/THEMISorbitNumber.py
+/pyMagnetoSonify/waveletsLocal/simpleTransform.py
